<resources>
    <string name="app_name">LoginSignUpApp</string>
    <string name="first_name">First Name</string>
    <string name="password">Password</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="pick_time">Pick Time</string>
    <string name="no_location_text">no location</string>
    <string name="launch_profile_page">Tap to See Info</string>
</resources>